# db-migration

./: .gitignore  notes.md  package-lock.json  package.json  pyproject.toml  questions.md  tsconfig.json
db_migration/: clean.py  models.py
prisma/: dev.db  schema.prisma
prisma/migrations/20220826011816_citations/: migration.sql
resources/: compounds.csv
scripts/: clean.py  data_extract.ipynb  parse.py  pull_redcap_data.py
src/: insert_citations.ts  script.ts
src/db_migration/: __main__.py  app.py  clean.py  csv_to_jsonlines.py  fetch.py  model.py  models.py  parse.py
tests/: test_models.py
