[tool.poetry]
name = "db_migration"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
pydantic = "^1.9.2"
pandas = "^1.4.3"
scipy = "^1.9.0"
pandas-profiling = "^3.2.0"
orjson = "^3.7.12"
python-dotenv = "^0.20.0"
pycap = "1.1.3"
ipython = "^8.4.0"
typer = "^0.6.1"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
