[tool.poetry]
name = "db_migration"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
orjson = "^3.7.12"
python-dotenv = "^0.20.0"
# we specifically require this version of PyCap
pycap = "1.1.3"
rich = "^12.5.1"
polars = "^0.15.0"
typer = {extras = ["all"], version = "^0.7.0"}
pandas = "^1.5.2"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"
ipython = "^8.4.0"

[tool.poetry.scripts]
db_migration = "db_migration.__main__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
