[tool.poetry]
name = "db_migration"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
pydantic = "^1.9"
orjson = "^3.7"
python-dotenv = "^0.21"
pycap = "1.1.3"  # we specifically require this version of PyCap
rich = "^13.0"
polars = "^0.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.218"
black = "^22.12"
pytest = "^7.2"
ipython = "^8.8"

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
